add picasso library and recycler view functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Imbd_Hatchworks</string>
+    <string name="img_content_desc">movie image</string>
 </resources>
